--- a/html/index/index.html
+++ b/html/index/index.html
@@ -35,9 +35,9 @@
   </div>
   <header class="header">
       <ul class="header-nav col-md-8 col-md-offset-2">
+        <li><a href="#">首页</a></li>
         <li><a href="#">线路查询</a></li>
-        <li><a href="#">关于</a></li>
-        <li><a href="#">logo</a></li>
+        <li><a href="#">信息展示</a></li>
         <li><a href="#">团队</a></li>
         <li><a href="#">联系我们</a></li>
       </ul>
