--- a/html/index/index.html
+++ b/html/index/index.html
@@ -111,16 +111,17 @@
     </div>
   </section>
 
-
+  <section class="ad-block">
+    <h1>随行伴您效率出行</h1>
+  </section>
 
 
   <section class="feature section container-fluid">
     <h1 class="section-title">未来我们将</h1>
     <div class="col-md-8 col-md-offset-2">
-      <p>拉风拉风啊啊拉风啊</p>
-      <p>拉风啊拉风拉风啊</p>
-      <p>拉风啊拉风啊拉风啊</p>
-      <p>拉风啊拉风啊拉风啊拉风啊</p>
+      <p>随行站内在线订票</p>
+      <p>提供城市间专车直达功能</p>
+      <p>添加城市气候模块</p>
     </div>
   </section>
 
