--- a/html/detailsHtml/details.html
+++ b/html/detailsHtml/details.html
@@ -393,10 +393,10 @@
                                             <div class="space"></div>
                                             <div class="saveStationsName">
                                                 <?php  ?>
-                                                <div>默认站X</div>
+                                                <div>无</div>
                                                 <?php  ?>
-                                                <!-- 留一站才停站信息按钮显示
-                                            </div> -->
+                                                <!-- 留一站才停站信息按钮显示 -->
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
