--- a/html/index/index.html
+++ b/html/index/index.html
@@ -12,11 +12,9 @@
   <!-- Place favicon.ico in the root directory -->
 
   <!-- style file -->
-  <link rel="stylesheet" href="./html/index/css/bootstrap.css">
-  <!-- <link rel="stylesheet" href="css/bootstrap-theme.css"> -->
-  <link rel="stylesheet" href="./html/index/css/normalize.css">
-  <link rel="stylesheet" href="./html/index/css/main.css">
-  <link rel="stylesheet" href="./html/index/css/base.css">
+  <link rel="stylesheet" href="html/index/css/bootstrap.css">
+  <link rel="stylesheet" href="html/index/css/normalize.css">
+  <link rel="stylesheet" href="html/index/css/base.css">
 </head>
 
 <body>
@@ -24,7 +22,7 @@
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
 
-
+  <div class="page-bg"></div>
 
   <!-- code start here -->
 
@@ -35,11 +33,11 @@
   </div>
   <header class="header">
       <ul class="header-nav col-md-8 col-md-offset-2">
-        <li><a href="#">首页</a></li>
-        <li><a href="#">线路查询</a></li>
-        <li><a href="#">信息展示</a></li>
-        <li><a href="#">团队</a></li>
-        <li><a href="#">联系我们</a></li>
+        <li><a href="index/index/details.html">线路查询</a></li>
+        <li><a href="javascript: void(0);" id="to_about">关于</a></li>
+        <li><a href="javascript: void(0);" id="to_about">logo</a></li>
+        <li><a href="javascript: void(0);" id="to_team">团队</a></li>
+        <li><a href="javascript: void(0);" id="to_contact">联系我们</a></li>
       </ul>
   </header>
 
@@ -51,27 +49,30 @@
   <section class="banner jumbotron container-fluid">
       <div class="col-md-8 col-md-offset-2">
         <h1>随行网</h1>
-        <p><span>最全、最优</span>的出行路线咨询</p>
+        <p><span>最全、最优</span>的出行路线方案规划</p>
       </div>
   </section>
 
 
   <section class="query container-fluid">
     <div class="col-md-8 col-md-offset-2">
-      <form class="index-query">
-        <input type="text" placeholder="出发城市">
-        <input type="text" placeholder="目的城市">
+      <form class="index-query" action="./index.php" method="GET">
+        <input type="hidden" name="con" value="details">
+        <input type="hidden" name="med" value="show">
+        <input type="text" placeholder="出发城市" title="from" name="start">
+        <input type="text" placeholder="目的城市" title="to" name="end">
         <button type="submit" class="submit">线路查询</button>
+        <ul class="city-auto">
+        </ul>
       </form>
     </div>
   </section>
 
 
-  <section class="about section container-fluid">
+  <section class="about section container-fluid" id="about">
     <div class="col-md-5 col-md-offset-2">
       <h1 class="section-title left">我们所做的</h1>
-      <p>21世纪科技发展日新月异，各类交通工具层出不穷，人们的出行方式也趋于多样化。面对日益多元化的交通工具，人们往往眼花缭乱，困扰纠结选择何种方式出行。如何通过海量数据分析在最短时间内帮助用户获取<span>最便捷、最有价值</span>的路线，达到<span>时间利益最大化</span>，这已成为交通出行的急迫需求！
-</p>
+      <p><span>随行网</span>根据用户不同的出行需求，为用户提供<span>高效率</span>的出行方案。</p>
     </div>
   </section>
 
@@ -131,11 +132,12 @@
 
 
 
-  <section class="contact section container-fluid">
+
+  <section class="contact section container-fluid" id="contact">
     <div class="col-md-8 col-md-offset-2">
       <div class="col-md-6 contact-info">
         <h1 class="section-title left">联系我们</h1>
-        <p class="contact-com">如果您有任何对随行网的看法或建议，愿意帮助我们变得更好，欢迎通过线上或线下的方式将您的提议发送给我们：</p>
+        <p class="contact-com">如果您有任何对随行网的看法或建议，愿意帮助我们变得更好，欢迎通过线上或线下的方式将您的提议发送给我们</p>
         <p><b>地址：</b>湖南农业大学第13教学楼</p>
         <p><b>邮箱：</b><a href="mailto:deyunrel@163.com">hunaucsecl@163.com</a></p>
         <p><b>网址：</b><a href="http://www.kbell.me/">湖南农业大学互联网创新实验室</a></p>
@@ -153,40 +155,24 @@
           <label for="msg-text">信息反馈：</label>
           <textarea class="form-control" id="msg-text" rows="4" placeholder="您的提议或反馈"></textarea>
         </div>
-        <button type="submit" class="btn" id="msg-btn">Submit</button>
+        <button type="submit" class="btn" id="msg-btn">提交</button>
       </div>
     </div>
   </section>
 
 
   <footer class="footer">
-    @copyright
+    Copyright © 2018 <a href="http://www.kbell.me/">湖南农业大学互联网创新实验室</a>
   </footer>
 
 
   <!-- script -->
-  <script src="./html/index/js/modernizr.js"></script>
-  <script src="./html/index/js/jquery.js"></script>
-  <script src="./html/index/js/plugins.js"></script>
-  <script src="./html/index/js/bootstrap.js"></script>
-  <script src="./html/index/js/toolFunc.js"></script>
-  <script src="./html/index/js/main.js"></script>
-  <script type="text/javascript">
-    $(function() {
-      $.ajax({
-        url: './index.php?con=index&med=get_station',
-        type: 'GET',
-        success: function(res) {
-          let aCitys = res.split(',');
-          console.log(aCitys);
-        }
-      })
-
-      // $('#input').input(function() {
-
-      // })
-    })
-  </script>
+  <script src="html/index/js/modernizr.js"></script>
+  <script src="html/index/js/jquery.js"></script>
+  <script src="html/index/js/plugins.js"></script>
+  <script src="html/index/js/bootstrap.js"></script>
+  <script src="html/index/js/toolFunc.js"></script>
+  <script src="html/index/js/main.js"></script>
 </body>
 
 </html>
