--- a/html/index/index.html
+++ b/html/index/index.html
@@ -33,10 +33,10 @@
   </div>
   <header class="header">
       <ul class="header-nav col-md-8 col-md-offset-2">
-        <li><a href="index/index/details.html">线路查询</a></li>
-        <li><a href="javascript: void(0);" id="to_about">关于</a></li>
-        <li><a href="javascript: void(0);" id="to_about">logo</a></li>
-        <li><a href="javascript: void(0);" id="to_team">团队</a></li>
+        <li><a href="#">首页</a></li>
+        <li><a href="./index.php?con=details&med=display">线路查询</a></li>
+        <li><a href="javascript: void(0);" id="to_about">特色</a></li>
+        <li><a href="javascript: void(0);" id="to_team">关于未来</a></li>
         <li><a href="javascript: void(0);" id="to_contact">联系我们</a></li>
       </ul>
   </header>
@@ -58,7 +58,7 @@
     <div class="col-md-8 col-md-offset-2">
       <form class="index-query" action="./index.php" method="GET">
         <input type="hidden" name="con" value="details">
-        <input type="hidden" name="med" value="show">
+        <input type="hidden" name="med" value="display">
         <input type="text" placeholder="出发城市" title="from" name="start">
         <input type="text" placeholder="目的城市" title="to" name="end">
         <button type="submit" class="submit">线路查询</button>
