--- a/html/index/index.html
+++ b/html/index/index.html
@@ -27,32 +27,25 @@
 
   <!-- code start here -->
 
-  <div class="nav-btn">
-    <span></span>
-    <span></span>
-    <span></span>
-  </div>
-  <div class="header">
-      <div class="headerContent">
+  <div class="header container-fluid">
+      <div class="nav-btn">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+      <div class="headerContent col-md-8 col-md-offset-2">
           <div class="siteName"><img src="favicon.ico" /><span>随行网</span></div>
-          <div class="siteContents">
+          <div class="nav">
+          <ul class="siteContents">
               <li><a href="./index.php?con=details&med=display&start=&end=">线路查询</a></li>
-              <li><a href="jvascript:void(0)" id="to_about">关于</a></li>
-              <li><a href="jvascript:void(0)" id="to_advantage">优势</a></li>
-              <li><a href="jvascript:void(0)" id="to_feature">未来</a></li>
-              <li><a href="jvascript:void(0)" id="to_content">联系我们</a></li>
+              <li><a id="to_about">关于</a></li>
+              <li><a id="to_advantage">优势</a></li>
+              <li><a id="to_feature">未来</a></li>
+              <li><a id="to_contact">联系我们</a></li>
+          </ul>
           </div>
       </div>
   </div>
-  <!-- <header class="header">
-      <ul class="header-nav col-md-8 col-md-offset-2">
-        <li><a href="./index.php?con=details&med=display&start=&end=">线路查询</a></li>
-        <li><a href="javascript: void(0);" id="to_advantage">优势</a></li>
-        <li><a href="javascript: void(0);" id="to_">logo</a></li>
-        <li><a href="javascript: void(0);" id="to_feature">未来</a></li>
-        <li><a href="javascript: void(0);" id="to_contact">联系我们</a></li>
-      </ul>
-  </header> -->
 
 
 
