--- a/management/html/manage.html
+++ b/management/html/manage.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>随行管理应用系统</title>
     <link rel="stylesheet" type="text/css" href="../css/manage.css">
     <script src="../js/jquery.min.js"></script>
 </head>
