--- a/management/html/manage.html
+++ b/management/html/manage.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>随行管理应用系统</title>
     <link rel="stylesheet" type="text/css" href="../css/manage.css">
     <script src="../js/jquery.min.js"></script>
 </head>
@@ -42,7 +42,7 @@
                     <div>验证码 :
                         
                         <input class="code" type="text" value="" />
-                        <img class="yan" src="http://localhost/suixing/phpImageChecked/setImageChecked.php">
+                        <img class="yan" src="http://127.0.0.1/suixing/phpImageChecked/setImageChecked.php">
                         <a class="change" href="javascript:;">看不清换一张</a>
                     </div>
                     <div class="txt-1">验证码不能为空</div>
