--- a/management/html/manage.html
+++ b/management/html/manage.html
@@ -42,7 +42,7 @@
                     <div>验证码 :
                         
                         <input class="code" type="text" value="" />
-                        <img class="yan" src="http://127.0.0.1/suixing/phpImageChecked/setImageChecked.php">
+                        <img class="yan" src="../../phpImageChecked/setImageChecked.php">
                         <a class="change" href="javascript:;">看不清换一张</a>
                     </div>
                     <div class="txt-1">验证码不能为空</div>
