--- a/html/index/index.html
+++ b/html/index/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>随行网</title>
-  <link rel="shortcut Icon" href="html/detailsHtml/favicon.ico">
+  <link rel="shortcut Icon" href="favicon.png">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="manifest" href="site.webmanifest">
@@ -34,7 +34,7 @@
         <span></span>
       </div>
       <div class="headerContent col-md-8 col-md-offset-2">
-          <div class="siteName"><img src="favicon.ico" /><span>随行网</span></div>
+          <div class="siteName"><img src="favicon.png" /><span>随行网</span></div>
           <div class="nav">
           <ul class="siteContents">
               <li><a href="./index.php?con=details&med=display&start=&end=">线路查询</a></li>
