--- a/html/detailsHtml/transCity.html
+++ b/html/detailsHtml/transCity.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="shortcut Icon" href="favicon.ico">
+    <link rel="shortcut Icon" href="favicon.png">
     <link rel="stylesheet" type="text/css" href="html/detailsHtml/css/details.css">
     <link rel="stylesheet" type="text/css" href="html/detailsHtml/css/transCity.css">
     <link rel="stylesheet" type="text/css" href="html/detailsHtml/css/Plugins/bootstrap.css">
@@ -15,7 +15,7 @@
     <div class="header">
         <div class="headerContent">
             <div class="siteName">
-                <a href="./index.php"><img src="favicon.ico" /><span>随行网</span></a>
+                <a href="./index.php"><img src="favicon.png" /><span>随行网</span></a>
             </div>
             <div class="siteContents">
                 <li><a href="./index.php">首页</a></li>
